--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
               <a id="msgLink" href="#" target="_blank" class="bg-black hover:bg-[color:var(--accent)] transition-colors text-white py-3 rounded-xl text-center text-sm font-medium inline-flex items-center justify-center gap-2">
                 <i class="bi bi-messenger"></i><span>Message</span>
               </a>
-              <a id="tgLink" href="https://t.me/Angkorkey_admin_2" target="_blank" class="bg-black hover:bg-[color:var(--accent)] transition-colors text-white py-3 rounded-xl text-center text-sm font-medium inline-flex items-center justify-center gap-2">
+              <a id="tgLink" href="t.me/Angkorkey_admin_2" target="_blank" class="bg-black hover:bg-[color:var(--accent)] transition-colors text-white py-3 rounded-xl text-center text-sm font-medium inline-flex items-center justify-center gap-2">
                 <i class="bi bi-telegram"></i><span>Telegram</span>
               </a>
             </div>
